--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         
 
       <!-- About Start -->
-<div class="container-fluid overflow-hidden py-5" style="margin-top: 6rem;">
+<div class="container-fluid overflow-hidden " style="margin-top: 5rem;">
     <div class="container py-5">
         <div class="row g-5">
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
