--- a/service.html
+++ b/service.html
@@ -199,7 +199,7 @@
                     </div>
                     <h4 class="mb-4">For Candidates</h4>
                     <p class="mb-4">Looking for career guidance and support? Connect with us, and we’ll provide personalized career advice to help you reach your goals.</p>
-                    <a href="#" class="btn btn-primary mt-2">Book a Meeting</a>
+                    <a href="https://calendly.com/billionjobss" class="btn btn-primary mt-2">Book a Meeting</a>
                 </div>
             </div>
 
@@ -210,7 +210,7 @@
                     </div>
                     <h4 class="mb-4">For Companies</h4>
                     <p class="mb-4">Need a solid strategy to manage your HR department effectively? Let us help you streamline your processes with tailored HR solutions.</p>
-                    <a href="#" class="btn btn-primary mt-2">Book a Meeting</a>
+                    <a href="https://calendly.com/billionjobss" class="btn btn-primary mt-2">Book a Meeting</a>
                 </div>
             </div>
         </div>
