--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
 
 
         <!-- Contact Start -->
-        <div class="container-fluid contact py-5">
+        <div class="container-fluid  py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 900px;">
                     <h4 class="text-primary mb-4">Contact Us</h4>
