--- a/Placement.html
+++ b/Placement.html
@@ -109,7 +109,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">PHP Developer</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹30,000 - ₹60,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -120,7 +120,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">Dot Net Developer</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹35,000 - ₹70,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -131,7 +131,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">Software Developer</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹40,000 - ₹80,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -142,7 +142,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">Flutter App Developer</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹35,000 - ₹65,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -153,7 +153,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">Data Analyst</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹30,000 - ₹60,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -164,7 +164,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">Business Analyst</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹35,000 - ₹65,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -177,7 +177,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">Graphic Designer</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹20,000 - ₹40,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -188,7 +188,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">Digital Marketing Executive</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹25,000 - ₹50,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -199,7 +199,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">Business Development Executive</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹30,000 - ₹55,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -210,7 +210,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">Software Tester</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹30,000 - ₹60,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -221,7 +221,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">WordPress Developer</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹25,000 - ₹50,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -234,7 +234,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">Accountant</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹20,000 - ₹40,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -245,7 +245,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">HR Executive</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹25,000 - ₹45,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
@@ -256,7 +256,7 @@
                         <div class="card job-listing">
                             <div class="card-body">
                                 <h5 class="card-title">Telecaller</h5>
-                                <p class="card-text">Location: Alappuzha, Kerala</p>
+                                <p class="card-text">Location: Kochi , Calicut , Kerala</p>
                                 <p class="card-text">Type: Full Time</p>
                                 <p class="card-text">Salary: ₹15,000 - ₹30,000</p>
                                 <a href="contact.html" class="btn-primaryp">Apply Now</a>
