--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
-        <meta content="" name="description">
+    
+        <meta name="keywords" content="job consultancy, HR solutions, recruitment agency, recruitment, ATS resume, best job consultancy in Kerala, best HR software, HR management services, HR services, best recruitment agency in Kerala, best recruitment agency in India, professional resume building, HR services for freshers, HR solutions for experienced candidates, Billion Jobs, global recruitment, career opportunities, job seekers, employers, recruitment solutions, staffing agency, executive search, talent acquisition, employee management, resume writing services, employment services, job placement, career development, workforce management, HR technology, recruitment process outsourcing, staffing solutions, headhunting, recruitment software, talent management, hiring solutions, job search assistance">
+
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
